--- a/doc/specification.org
+++ b/doc/specification.org
@@ -221,15 +221,16 @@ threshold. Filter types (high-pass, low-pass, band-pass, band-stop), cutoff
 frequencies, orders (number of poles), or custom numerator and demoninator coefficients
 need to be specified.
 
-So far, jfilter only support Butterworth filter method. When using a big number(>=10) 
-for order and small cutoff frequency (order >= 10 for freq <= 300, and order >= 15 for
-freq <= 500), jfilter doesn't work as it supposed to be.
+So far, jfilter only implements Butterworth filters. Because the digital implementation
+is an IIR design, high-order (greater than about 8) filters may become unstable and
+generate undefined outputs. This behavior is more likely to occur when the cutoff
+frequencies are near either zero or the Nyquist frequency.
 
 *** JACK Ports                                                       :rel2_0:
 
 + in_NNN :: input. NNN is a numerical index. The number of ports and their type
             is determined at startup by specifying a list of ports to connect to
-            the client.  The client may also create custom-named ported as
+            the client.  The client may also create custom-named ports, as
             specified by the user.
 + out_NNN :: correspondent processed data, output. 
 
@@ -237,7 +238,7 @@ The client will not make any changes to its port configuration during operation.
 
 *** JACK Events                                                      :rel2_0:
 
-1. When xrun happens, pads_reset is called to reset infinite impulse response.
+1. When an xrun occurs, pads_reset is called to reset infinite impulse response.
 
 *** Options and behavior
 
@@ -246,7 +247,8 @@ The client will not make any changes to its port configuration during operation.
 1. Filter type. Choose from high-pass, low-pass, band-pass, and band-stop.
 2. Cutoff frequency. 
 3. Order. Number of poles.
-4. Numerator and denominator. Parameters used for custom filter design.
+4. Numerator and denominator. Pre-calculated parameters used for custom filter
+   design. These would be used in place of type, cutoff frequency, and order.
 
 ** jflip
 
