--- a/doc/specification.org
+++ b/doc/specification.org
@@ -214,6 +214,42 @@ events and their times will be logged. The client may accept input during
 operation to adjust these parameters, and it may provide information on the
 terminal as to the current state of the detector.
 
+** jfilter
+
+The function of *jfilter* is to filter the input data according to cutoff frequency 
+threshold. Filter types (high-pass, low-pass, band-pass, band-stop), cutoff 
+frequencies, orders (number of poles), or custom numerator and demoninator coefficients
+need to be specified.
+
+So far, jfilter only implements Butterworth filters. Because the digital implementation
+is an IIR design, high-order (greater than about 8) filters may become unstable and
+generate undefined outputs. This behavior is more likely to occur when the cutoff
+frequencies are near either zero or the Nyquist frequency.
+
+*** JACK Ports                                                       :rel2_0:
+
++ in_NNN :: input. NNN is a numerical index. The number of ports and their type
+            is determined at startup by specifying a list of ports to connect to
+            the client.  The client may also create custom-named ports, as
+            specified by the user.
++ out_NNN :: correspondent processed data, output. 
+
+The client will not make any changes to its port configuration during operation.
+
+*** JACK Events                                                      :rel2_0:
+
+1. When an xrun occurs, pads_reset is called to reset infinite impulse response.
+
+*** Options and behavior
+
+**** commandline options                                             :rel2_0:
+
+1. Filter type. Choose from high-pass, low-pass, band-pass, and band-stop.
+2. Cutoff frequency. 
+3. Order. Number of poles.
+4. Numerator and denominator. Pre-calculated parameters used for custom filter
+   design. These would be used in place of type, cutoff frequency, and order.
+
 ** jflip
 
 The function of *jflip* is to whiten the input data by randomly inverting it around
